java: late thesis-era working tree